chore: fix address-copy icon buttons

--- a/public/pages/projectdetails.html
+++ b/public/pages/projectdetails.html
@@ -1559,7 +1559,7 @@
                                   30525 SE Issaquah-Fall City Rd, Fall City, WA,
                                   Issaquah, WA 98024
                                 </span>
-                                <button class="d-contents address-copy-icon">
+                                <button class="address-copy-icon">
                                   <span class="far fa-copy fs-9"></span>
                                   <span
                                     class="far fa-check-circle fs-9 text-success"
@@ -1740,7 +1740,7 @@
                                   30525 SE Issaquah-Fall City Rd, Fall City, WA,
                                   Issaquah, WA 98024
                                 </span>
-                                <button class="d-contents address-copy-icon">
+                                <button class="address-copy-icon">
                                   <span class="far fa-copy fs-9"></span>
                                   <span
                                     class="far fa-check-circle fs-9 text-success"
@@ -1922,7 +1922,7 @@
                                   30525 SE Issaquah-Fall City Rd, Fall City, WA,
                                   Issaquah, WA 98024
                                 </span>
-                                <button class="d-contents address-copy-icon">
+                                <button class="address-copy-icon">
                                   <span class="far fa-copy fs-9"></span>
                                   <span
                                     class="far fa-check-circle fs-9 text-success"
@@ -2102,7 +2102,7 @@
                                   30525 SE Issaquah-Fall City Rd, Fall City, WA,
                                   Issaquah, WA 98024
                                 </span>
-                                <button class="d-contents address-copy-icon">
+                                <button class="address-copy-icon">
                                   <span class="far fa-copy fs-9"></span>
                                   <span
                                     class="far fa-check-circle fs-9 text-success"
